# ctrecorder

./: ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in
contrib/: Makefile.am  Makefile.in  restart.sh
contrib/centos/: ctrecorder.init.d  ctrecorder.spec
contrib/debian/: ctrecorder-default  ctrecorder-init.d
contrib/openwrt/: ctrecorder-0.1.4_uclibc_powerpc.patch  ctrecorder-openwrt-2012-05-08.diff
doc/: Makefile.am  Makefile.in  ctrecorder.8  ctrecorder.conf.5  ctrecorder.conf.html  ctrecorder.html
src/: Makefile.am  Makefile.in  ctrecorder.c  ctrecorder.h  daemon.c  options.h  util.c
